Responsize complete; N-dash update; form overflow correction

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -245,7 +245,6 @@ form {
 	border: $coolBrown 1px solid;
     border-radius: 4px;
     box-shadow: inset 0 1px 0 1px rgba($coolBrown, 0.3);
-    overflow: hidden;
 }
 
 section {
